# sorthc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sorthl  std.f
abi/: main.cpp
sorth-runtime/: forth-runtime.ll  sorth-runtime.cpp  sorth-runtime.h
sorth-runtime/abi/: data-stack.cpp  data-stack.h  errors.cpp  errors.h  main.cpp  structures.cpp  structures.h  variables.cpp  variables.h
sorth-runtime/abi/words/: array-words.cpp  array-words.h  byte-buffer-words.cpp  byte-buffer-words.h  hash-table-words.cpp  hash-table-words.h  math-logic-words.cpp  math-logic-words.h  posix-words.cpp  posix-words.h  regiser-words.cpp  register-words.h  runtime-words.cpp  runtime-words.h  stack-words.cpp  stack-words.h  string-words.cpp  string-words.h  structure-words.cpp  structure-words.h  terminal-words.cpp  terminal-words.h  value-type-words.cpp  value-type-words.h
sorth-runtime/data-structures/: array.cpp  array.h  blocking-value-queue.cpp  blocking-value-queue.h  byte-buffer.cpp  byte-buffer.h  hash-table.cpp  hash-table.h  structure.cpp  structure.h  value.cpp  value.h
sorthc/: error.cpp  error.h  sorthc.cpp  sorthc.h
sorthc/compilation/: compiler.cpp  compiler.h  ir_generator.cpp  ir_generator.h  word.cpp  word.h
sorthc/compilation/byte-code/: compiler-runtime.h  construction.cpp  construction.h  context.cpp  context.h  instruction.cpp  instruction.h  jit.cpp  jit.h  script.cpp  script.h  structure-type.cpp  structure-type.h
sorthc/compilation/run-time/: array.cpp  array.h  compiler-runtime.cpp  compiler-runtime.h  contextual-list.h  dictionary.cpp  dictionary.h  value.cpp  value.h
sorthc/compilation/run-time/built-in-words/: built-in-words.cpp  built-in-words.h
sorthc/source/: location.cpp  location.h  source-buffer.cpp  source-buffer.h  token.cpp  token.h  tokenize.cpp  tokenize.h
src/: error.cpp  error.h  sorthc.cpp  sorthc.h
src/source/: location.cpp  location.h  source-buffer.cpp  source-buffer.h  token.cpp  token.h  tokenize.cpp  tokenize.h
std/: array.f  byte-buffer.f  compiler-std.f  core-words.f  ffi.f  hash-table.f  io-posix.f  io-words.f  json.f  math.f  posix.f  printing.f  strings.f  structure.f  terminal.f  user.f  values.f
